Bug 1319079 - Fix fonts inconsistency on Linux;r=bgrins Font size on HTML side of Inspector was smaller than the CSS Rule View (in Firebug theme only) Font Size for Linux was set to 80% in common.css Font Size for Rule View was set to 11px (causing discrepancy). Replaced font-size:80% with 11px as it was too small for easy readability Removed font-size:11px for Rule View as it is now redundant
MozReview-Commit-ID: 4a7tY4YEHgg

UltraBlame original commit: a1c8a9bc7ebc2e7aa0de795f855b9a9b20899820

--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -240,47 +240,8 @@ font
 -
 size
 :
-80
-%
-;
-}
-:
-root
-[
-platform
-=
-"
-linux
-"
-]
-.
-theme
--
-firebug
-.
-devtools
--
-monospace
-{
-font
--
-size
-:
 11px
 ;
-/
-*
-Font
-becomes
-too
-small
-for
-linux
-with
-80
-%
-*
-/
 }
 /
 *
