--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -158,26 +158,6 @@ View
 Tabpanel
 *
 /
-.
-theme
--
-firebug
-.
-ruleview
-{
-font
--
-family
-:
-monospace
-;
-font
--
-size
-:
-11px
-;
-}
 #
 sidebar
 -
